# UserLAnd

./: .gitignore  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  test.yml
CustomLibrary/: build.gradle
CustomLibrary/src/AiCLI/res/values-es/: strings.xml
CustomLibrary/src/AiCLI/res/values-pl/: strings.xml
CustomLibrary/src/AiCLI/res/values-pt-rBR/: strings.xml
app/: build.gradle
app/src/AiCLI/: AndroidManifest.xml
app/src/AiCLI/assets/apps/: apps.txt
app/src/AiCLI/assets/apps/aicli/: aicli.sh  aicli.txt
app/src/AiCLI/assets/apps/claude/: claude.sh  claude.txt
app/src/AiCLI/assets/apps/codex/: codex.sh  codex.txt
app/src/AiCLI/assets/apps/gemini/: gemini.sh  gemini.txt
app/src/AiCLI/assets/apps/github/: github.sh  github.txt
app/src/AiCLI/assets/apps/ubuntu/: ubuntu.sh
app/src/AiCLI/res/values/: strings.xml  themes.xml
app/src/Andacious/assets/apps/andacious/: andacious.sh
app/src/BirdBox/: AndroidManifest.xml
app/src/BirdBox/assets/apps/thunderbird/: thunderbird.sh
app/src/FoxBox/assets/apps/firefox/: firefox.sh
app/src/GIMP/assets/apps/gimp/: gimp.sh
app/src/IDLE/assets/apps/idle/: idle.sh
app/src/Inky/assets/apps/inkscape/: inkscape.sh
app/src/LibreDocs/assets/apps/libredocs/: libredocs.sh
app/src/Octave/assets/apps/octave/: octave.sh
app/src/R/assets/apps/r/: r.sh
app/src/UserLAnd/: AndroidManifest.xml
app/src/UserLAnd/assets/apps/alpine/: alpine.sh
app/src/UserLAnd/assets/apps/arch/: arch.sh
app/src/UserLAnd/assets/apps/debian/: debian.sh
app/src/UserLAnd/assets/apps/kali/: kali.sh
app/src/deVStudio/: AndroidManifest.xml
app/src/deVStudio/assets/apps/devstudio/: devstudio.sh
app/src/gnuplot/assets/apps/gnuplot/: gnuplot.sh
app/src/main/: AndroidManifest.xml
app/src/main/java/tech/ula/: MainActivity.kt  (+1 more)
app/src/main/res/values/: strings.xml
qemu-backend/: build.gradle.kts
qemu-backend/src/main/: AndroidManifest.xml
qemu-backend/src/main/assets/kernel/: initrd.img
qemu-backend/src/main/cpp/: CMakeLists.txt  qemu_img_jni.c  qemu_jni.c  vhost_stubs.c
(+6 files in other folders)
